--- a/Ki4C_Solution/Views/Common/Company/IntroductionDX.cshtml
+++ b/Ki4C_Solution/Views/Common/Company/IntroductionDX.cshtml
@@ -29,15 +29,15 @@
         <br>
         <hr style="border: solid 0.5px black; width: 100%;" />
         <!-- DX 소개 -->
-        <div id=intro style="width: 100%; float: left;">
+        <div id=intro style="width: 80%; float: left;">
             <br />
             <h3>DX진단은 오늘날 기업의 핵심 역량을 평가하는 지표입니다.</h3>
             <br />
             <div>
                 <p>
                     케이아이포씨 협동조합, 디지털 트랜스포메이션 진단 및 컨설팅 서비스 제공 <br>
-                    한국형 '몬드라곤'을 꿈꾸는 초연결•초융합•초지능 지향 협동조합 <br>
-                    4차 산업혁명시대가 도래하며 전략적 사업 구성이 중요해졌다. 특히 신생기업뿐만 아니라 기존 중소•중견기업 역시 변화하는 시대 흐름에 맞는 미래먹거리를 확보하기 위해 사활을 걸고 있다. <br> <br>
+                    한국형 '몬드라곤'을 꿈꾸는 초연결·초융합·초지능 지향 협동조합 <br>
+                    4차 산업혁명시대가 도래하며 전략적 사업 구성이 중요해졌다. 특히 신생기업뿐만 아니라 기존 중소·중견기업 역시 변화하는 시대 흐름에 맞는 미래먹거리를 확보하기 위해 사활을 걸고 있다. <br> <br>
                     하지만 정확하게 상황을 진단하고 방향을 잡기란 쉽지 않다. 이러한 어려움을 겪는 중소•벤처기업들의 해결사를 자처한 협동조합이 있다. 4차 산업혁명시대 기업의 생존과 번영을 위해 제4차 산업혁명시대 핵심기술 보유 각 분야 전문가들이 뭉친 케이아이포씨(Ki4C) 협동조합이 그 주인공이다.
                 </p>
             </div>
