--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationQnA.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationQnA.cshtml
@@ -22,7 +22,7 @@
             평가문제 등록
         </div>
         <br>
-        <hr style="border: solid 0.5px black; width: 100%;" />
+        <hr style="width: 100%" />
         <!-- 평가문제 등록 -->
         <div style="padding-top: 30px; padding-left: 30px; height: 200px;">
             <div style="padding-right: 30px; display: inline-block;">
@@ -33,7 +33,6 @@
             <div style="padding-left: 50px; display: inline-block;">
                 <select style="max-width: 200px; width: 130%; height: 30px; font-size: 16px;
                         margin-bottom: 3px;" id="DiagnosisEvaluationAreaSelecter">
-
                 </select>
             </div>
             <div style="padding-left: 50px; display: inline-block;">
