--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisType.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisType.cshtml
@@ -23,7 +23,7 @@
             진단 종류 등록
         </div>
         <br>
-        <hr style="border: solid 0.5px black; width: 100%;" />
+        <hr style="width: 100%" />
         <!-- 진단 종류 등록 -->
         <div style="padding-top: 30px; padding-left: 30px; height: 200px;">
             <a>진단종류코드: </a>
@@ -54,7 +54,7 @@
             </div>
             <br>
             <div style="width: 90%; margin: auto;">
-@*                <table id="table">
+                @*                <table id="table">
                     <tr align="center" bgcolor="skyblue">
                         <td>번호</td>
                         <td>진단종류코드</td>
