--- a/Ki4C_Solution/Views/Member/Diagnosis/Application4Evaluation.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/Application4Evaluation.cshtml
@@ -2,6 +2,46 @@
     Layout = "~/Views/Shared/_LayoutKi4C_Aside_dg_ev_mgnt.cshtml";
     ViewData["Title"] = "기준정보 관리/진단 종류";
 }
+<style>
+    .inputType1 {
+        width: 150px;
+        height: 25px;
+        border: solid 0.5px #2B92D5;
+        border-radius: 10px;
+        padding: 5px;
+    }
+
+    .btnType1 {
+        font-size: 12px;
+        font-weight: 500;
+        color: white;
+        background-color: #34B0C7;
+        border: none;
+        width: 80px;
+        height: 25px;
+        border-radius: 20px;
+    }
+    .btnType2 {
+        font-size: 12px;
+        font-weight: 500;
+        color: white;
+        background-color: #34B0C7;
+        border: none;
+        width: 130px;
+        height: 25px;
+        border-radius: 20px;
+    }
+
+    select {
+        width: 150px;
+        height: 20px;
+        padding: 3px;
+        margin-top: 10px;
+        border: solid 0.3px #34B0C7;
+        border-radius: 0.5em;
+        box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+    }
+</style>
 <!-- 섹션 -->
 <section>
     <!-- 콘텐츠 -->
@@ -19,10 +59,10 @@
             진단 평가
         </div>
         <br>
-        <hr style="border: solid 0.5px black; width: 100%;" />
+        <hr style="width: 100%" />
         <!-- 평가기업 신청 -->
         <div style="display: inline-block;">
-            <div id="buttonLocation">
+            <div id="buttonLocation" style="margin-bottom: 10px;">
                 <form style="padding-top: 10px; display: inline-block;">
                     <select style="height: 30px; font-size: 16px; padding-right: 30px;
                             margin-bottom: 3px;">
@@ -30,13 +70,13 @@
                         <option>진단일</option>
                     </select>
                 </form>
-                <input id=searchBox type="text" placeholder="검색어 입력" />
-                <button id="searchButton">검색</button>
+                <input class="inputType1" id=searchBox type="text" placeholder="검색어 입력" />
+                <button class="btnType1" id="searchButton">검색</button>
             </div>
             <br>
             <div style="width: 90%; margin: auto;">
                 <table id="table">
-                    <tr align="center" bgcolor="skyblue">
+                    <tr id="header" align="center" bgcolor="#34B0C7">
                         <td>번호</td>
                         <td>기업</td>
                         <td>진단일</td>
@@ -83,12 +123,12 @@
                     </tr>
                 </table>
             </div>
-            <div id="buttonLocation">
-                <input id="applyButton" type="submit" value="진단평가 신청하기" />
+            <div id="buttonLocation" style="margin-top: 10px;">
+                <input class="btnType2" id="applyButton" type="submit" value="진단평가 신청하기" />
             </div>
         </div>
     </div>
-        <!-- 평가기업 신청 -->
-        <!-- 콘텐츠 -->
+    <!-- 평가기업 신청 -->
+    <!-- 콘텐츠 -->
 </section>
 <!-- 섹션 -->
