--- a/Ki4C_Solution/Views/Shared/_Aside_dg_mgnt.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg_mgnt.cshtml
@@ -9,16 +9,23 @@
     td {
         word-wrap: break-word;
     }
-    #mypageButton{
-        font-size: 12px; font-weight: 600;
-        background-color: red;
+    #mypageButton {
+        width: 70px;
+        height: 20px;
+        font-size: 12px;
+        font-weight: 400;
+        background-color: #34B0C7;
         color: white;
         border: none;
         border-radius: 30px;
     }
-    #logoutButton{
-        font-size: 12px; font-weight: 600;
-        background-color: black;
+
+    #logoutButton {
+        width: 70px;
+        height: 20px;
+        font-size: 12px;
+        font-weight: 400;
+        background-color: #2A3142;
         color: white;
         border: none;
         border-radius: 30px;
@@ -122,7 +129,7 @@
             심사위원 홍길동  <br>
             산업공학과 교수
         </div>
-        <div style="position: relative; left: 60px;">
+        <div style="position: relative; left: 40px;">
             <input id="mypageButton" type="submit" value="마이페이지" />
             <input id="logoutButton" type="submit" value="로그아웃" />
         </div>
