--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationArea.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationArea.cshtml
@@ -23,7 +23,7 @@
             진단 평가영역 등록
         </div>
         <br>
-        <hr style="border: solid 0.5px black; width: 100%;" />
+        <hr style="width: 100%" />
         <!-- 진단 평가영역 등록 -->
         <div style="padding-top: 30px; padding-left: 30px; height: 200px;">
             <a>진단구분선택: </a>
