--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationMeasurement.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationMeasurement.cshtml
@@ -36,7 +36,7 @@
             진단 평가영역 등록 및 목록
         </div>
         <br>
-        <hr style="border: solid 0.5px black; width: 100%;" />
+        <hr style="width: 100%" />
         <!-- 입력 형식 -->
         <div style="padding-top: 30px; padding-left: 30px; height: 200px;">
             <a>평가척도 코드: </a>
