--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisInputType.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisInputType.cshtml
@@ -22,14 +22,14 @@
             진단 입력형식 등록
         </div>
         <br>
-        <hr style="border: solid 0.5px black; width: 100%;" />
+        <hr style="width: 100%" />
         <!-- 입력 형식 -->
         <div style="padding-top: 30px; padding-left: 30px; height: 200px;">
             <a>입력형식 코드: </a>
             <div style="padding-top: 10px; display: inline-block;">
                 <input type="text"
                        style="max-width: 400px; width: 130%; height: 25px; font-size: 16px;
-                        margin-bottom: 3px;" id="InputTypeCodeText"/>
+                        margin-bottom: 3px;" id="InputTypeCodeText" />
             </div>
             <br>
             <a>입력형식명: </a>
