--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisLevel.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisLevel.cshtml
@@ -22,7 +22,7 @@
             진단 수준 등록 및 목록
         </div>
         <br>
-        <hr style="border: solid 0.5px black; width: 100%;" />
+        <hr style="width: 100%" />
         <!-- 진단 수준 등록 -->
         <div style="padding-top: 30px; padding-left: 30px; height: 200px;">
             <a>진단 수준 코드: </a>
