--- a/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
@@ -1,6 +1,25 @@
 ﻿<style>
     #table {
         border: "1";
+        width: 800px;
+        height: 100px;
+        text-align: center;
+        background-color: #34B0C7;
+        border-color: white;
+        table-layout: fixed;
+    }
+
+    td {
+        font-size: 14px;
+        word-wrap: break-word;
+    }
+
+    #header td {
+        color: white;
+        font-weight: 700;
+    }
+/*    #table {
+        border: "1";
         width: 800px; height: 100px;
         text-align: center;
         background-color:skyblue; border-color: white;
@@ -8,51 +27,26 @@
     }
     td {
         word-wrap: break-word;
-    }
-    #mypageButton{
-        font-size: 12px; font-weight: 600;
-        background-color: red;
+    }*/
+    #mypageButton {
+        width: 70px;
+        height: 20px;
+        font-size: 12px;
+        font-weight: 400;
+        background-color: #34B0C7;
         color: white;
         border: none;
         border-radius: 30px;
     }
-    #logoutButton{
-        font-size: 12px; font-weight: 600;
-        background-color: black;
+
+    #logoutButton {
+        width: 70px;
+        height: 20px;
+        font-size: 12px;
+        font-weight: 400;
+        background-color: #2A3142;
         color: white;
         border: none;
-        border-radius: 30px;
-    }
-    #registButton{
-        background-color: white;
-        font-weight: 500;
-        border-color: grey;
-        width: 80px; height: 30px;
-        margin: 10px;
-        border-radius: 30px;
-    }
-    #modifyButton{
-        background-color: white;
-        font-weight: 500;
-        border-color: grey;
-        width: 80px; height: 30px;
-        margin: 10px;
-        border-radius: 30px;
-    }
-    #searchButton{
-        background-color: white;
-        font-weight: 500;
-        border-color: grey;
-        width: 40px; height: 30px;
-        margin: 10px;
-        border-radius: 30px;
-    }
-    #deleteButton{
-        background-color: white;
-        font-weight: 500;
-        border-color: grey;
-        width: 80px; height: 30px;
-        margin: 10px;
         border-radius: 30px;
     }
     #searchBox {
@@ -126,7 +120,7 @@
         <div style="display: inline; height: 20px; vertical-align: top; margin-left: 10px;">
             관리자466
         </div>
-        <div style="position: relative; left: 60px;">
+        <div style="position: relative; left: 40px;">
             <input id="mypageButton" type="submit" value="마이페이지" />
             <input id="logoutButton" type="submit" value="로그아웃" />
         </div>
